# cutroom

./: .gitignore  BACKLOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: repurpose.json
docs/: ablation-ea1da55fb38d.json  agent-paradigms.md  bench-repurpose-5a876fe0d613.json  launch-posts.md
scripts/: ablation.py  bench_repurpose.py  record_demo.sh
src/cutroom/: __init__.py  bench.py  checkpoints.py  cli.py  db.py  ffmpeg_util.py  recipes.py  sessions.py  trail.py  types.py
src/cutroom/agent/: __init__.py  budget.py  fanout.py  hooks.py  prompts.py  runner.py  tools.py
src/cutroom/index/: __init__.py  map.py  search.py
src/cutroom/ingest/: __init__.py  asr.py  audio.py  fetch.py  logger.py  shots.py
src/cutroom/recipes/: __init__.py
src/cutroom/recipes/builtin/: podcast-shorts.md  quotes.md  talk-highlights.md  teaser.md  tighten.md
src/cutroom/render/: __init__.py  captions.py  edl.py  ffmpeg.py  receipts.py
tests/: conftest.py  test_agent_tools.py  test_bench.py  test_budget.py  test_captions.py  test_checkpoints.py  test_cli.py  test_e2e.py  test_edl.py  test_fanout.py  test_ffmpeg_util.py  test_hooks.py  test_ingest.py  test_map.py  test_recipes.py  test_render.py  test_search.py  test_sessions.py  test_steering.py  test_trail.py  test_verify.py
